# PyTeslaCoil

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-deploy.yml
pyteslacoil/: __init__.py  constants.py  units.py  wire_data.py
pyteslacoil/engine/: __init__.py  coupling.py  environment.py  medhurst.py  primary.py  secondary.py  spark_gap_rotary.py  spark_gap_static.py  spark_length.py  topload.py  transformer.py  tuning.py
pyteslacoil/export/: __init__.py  consolidated.py  json_export.py  pdf_export.py
pyteslacoil/models/: __init__.py  coil_design.py  coupling_model.py  environment_model.py  primary_model.py  secondary_model.py  spark_gap_model.py  topload_model.py  transformer_model.py
pyteslacoil/presets/: __init__.py  demo_drsstc.py  demo_medium_sgtc.py  demo_small_sgtc.py
tests/: test_coupling.py  test_environment.py  test_integration.py  test_medhurst.py  test_presets_export.py  test_primary.py  test_secondary.py  test_spark_gap.py  test_spark_length.py  test_topload.py  test_transformer.py  test_tuning.py  test_units.py  test_wire_data.py
tests/fixtures/: javatc_reference.json
ui/: __init__.py  main.py  state.py  theme.py
ui/components/: __init__.py  cards.py  coil_visualizer.py  coupling_tab.py  environment_tab.py  header.py  presets_dialog.py  primary_tab.py  results_tab.py  secondary_tab.py  spark_gap_tab.py  topload_tab.py  transformer_tab.py
